force-app/main/default/objects/Program_Point__c/Program_Point__c.object-meta.xml
<CustomObject>
    <description>SOX object - object to hold program points data to display in dashboard report in partner portal</description>
    <label>Program Point</label>
    <nameField>
        <label>Program Points Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Points</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>