force-app/main/default/objects/Program_Point__c/fields/Accelerator_Points__c.field-meta.xml
<CustomField>
    <fullName>Accelerator_Points__c</fullName>
    <label>Accelerator Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>