force-app/main/default/objects/Program_Point__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <label>Fiscal Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>