force-app/main/default/objects/Program_Point__c/fields/Is_Account_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Is_Account_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Account Deleted</label>
    <type>Checkbox</type>
</CustomField>