force-app/main/default/objects/Program_Point__c/fields/Partner_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Partner_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Lookup</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Program Points</relationshipLabel>
    <relationshipName>Program_Points</relationshipName>
    <type>Lookup</type>
</CustomField>