force-app/main/default/objects/Program_Point__c/fields/Partner_Sourced_New_Logo__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sourced_New_Logo__c</fullName>
    <label>Partner Sourced #s</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>