force-app/main/default/objects/Program_Point__c/fields/Points_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Points_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Points External Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>