force-app/main/default/objects/Program_Point__c/fields/Ransomware_Accreditations_Certifications__c.field-meta.xml
<CustomField>
    <fullName>Ransomware_Accreditations_Certifications__c</fullName>
    <label>Ransomware Accred &amp; Certs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>