force-app/main/default/objects/Program_Point__c/fields/RCDP_Certification_Points__c.field-meta.xml
<CustomField>
    <fullName>RCDP_Certification_Points__c</fullName>
    <description>https://rubrik.atlassian.net/browse/PRIT25-738</description>
    <label>RCDP-T Certification Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>