force-app/main/default/objects/Program_Point__c/fields/RCDP_S_Certification_Points__c.field-meta.xml
<CustomField>
    <fullName>RCDP_S_Certification_Points__c</fullName>
    <description>PRIT26-116</description>
    <label>RCDP-S Certification Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>