force-app/main/default/objects/Program_Point__c/fields/RCRS_Certification_Points__c.field-meta.xml
<CustomField>
    <fullName>RCRS_Certification_Points__c</fullName>
    <description>https://rubrik.atlassian.net/browse/PRIT25-746</description>
    <label>RCRS Certification Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>