force-app/main/default/objects/Program_Point__c/fields/RCSA_Certification_Points__c.field-meta.xml
<CustomField>
    <fullName>RCSA_Certification_Points__c</fullName>
    <label>RCSA Certification Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>