force-app/main/default/objects/Program_Point__c/fields/RRS_Certification_Points__c.field-meta.xml
<CustomField>
    <fullName>RRS_Certification_Points__c</fullName>
    <label>RRS Certification Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>