force-app/main/default/objects/Program_Point__c/fields/Save_the_Data_Events__c.field-meta.xml
<CustomField>
    <fullName>Save_the_Data_Events__c</fullName>
    <label>Save the Data And Call Campaigns</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>