force-app/main/default/objects/Program_Point__c/fields/Technical_Sales_Accreditation__c.field-meta.xml
<CustomField>
    <fullName>Technical_Sales_Accreditation__c</fullName>
    <description>https://rubrik.atlassian.net/browse/PRIT25-763</description>
    <label>Technical Sales Accreditation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>