force-app/main/default/objects/Program_Point__c/fields/X100K_Increment_of_Total_Bookings__c.field-meta.xml
<CustomField>
    <fullName>X100K_Increment_of_Total_Bookings__c</fullName>
    <label>Partner Sourced Bookings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>