force-app/main/default/objects/Program_Point__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Partner_Lookup__c</columns>
    <columns>Total__c</columns>
    <columns>X100K_Increment_of_Total_Bookings__c</columns>
    <columns>Partner_Sourced_New_Logo__c</columns>
    <columns>Save_the_Data_Events__c</columns>
    <columns>Accelerator_Points__c</columns>
    <columns>Ransomware_Accreditations_Certifications__c</columns>
    <columns>RCIE_Certification_Points__c</columns>
    <columns>RRE_Certification_Points__c</columns>
    <columns>RRS_Certification_Points__c</columns>
    <columns>RTP_Certification_Points__c</columns>
    <columns>RCSA_Certification_Points__c</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fiscal_Year__c</field>
        <operation>equals</operation>
        <value>2025</value>
    </filters>
    <label>All</label>
</ListView>